fixed button alignment issue

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ main{
 
 .item2{
     background-color: var(--Cyan1);
+    display: grid;
 }
 .item2 h2, span{
     color: white;
@@ -81,7 +82,7 @@ main{
 }
 .item2 p{
     color: var(--Light-Gray);
-    margin-bottom: .25rem;
+    /* margin-bottom: .25rem; */
 }
 .signup{
     display: block;
@@ -90,12 +91,14 @@ main{
     color: white;
     padding: 1rem;
     text-align: center;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
+    align-self: end;
     border-radius: 5px;
     box-shadow: 0 10px 10px 0 hsla(179, 43%, 34%, 0.35);
 }
 .item3{
     background-color: var(--Cyan2);
+    display: grid;
 }
 .item3 h2{
     color: white;
